# Minecraft-Dockerfile-CLI

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY  SECURITY.md  goals.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: ask_a_question.md
.github/workflows/: issues.py  issues.yml  publisher.yml
src/: __init__.py  __main__.py
src/assets/docker/: .dockerignore  Dockerfile
src/assets/scripts/: run.sh
src/assets/templates/: .env.j2  docker-compose.yml.j2  template.json
src/cli/: builder.py  custom_group.py  manager.py  menu.py
src/core/: copy_files.py  docker.py  files.py  manage_json.py  manage_templates.py
src/templates/: docker-compose.yml.j2
src/utils/: cli.py
