[tool.poetry]
name = "minecraft-docker-cli"
version = "0.1.0"
description = "CLI tool to enhance and simplify containerization of Minecraft servers"
authors = ["Dtar380"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src", from = "./"}
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
jinja2 = "^3.1.6"
inquirer = "^3.4.1"
yaspin = "^3.3.0"
click = "^8.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
mypy = "^1.18.2"
isort = "^7.0.0"

[tool.poetry.scripts]
minecraft-docker-cli = "src.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
